--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="str_file_size">16.3 MB</string>
     <string name="str_file_pictures">5 Pictures</string>
     <string name="str_file_modality">MR</string>
+    <string name="ben_wilson">Ben Wilson</string>
 </resources>
